# SurRender

./: .gitignore  .gitmodules  Makefile  Makefile.am  README.md  autogen.sh  configure.ac  demo.c  demos.h  devbuild.sh  img2srtex.c  main.c  meson.build
assets/: BALL.BMP.SRT  BALLTILE.BMP.SRT  BALLTILE_TPR.BMP.SRT  BOXES.BMP.SRT  BRICKS.BMP.SRT  DDLC.BMP.SRT  GOODRA.BMP.SRT  KRABS.BMP.SRT  KRABS_WIDE.BMP.SRT  MENU_HELL.BMP.SRT  MISSINGTEX.PNG.SRT  PUCK.BMP.SRT  QB.BMP.SRT  TEST.BMP.SRT  TEST_SM.BMP.SRT  TILEROTTEX.BMP.SRT
demo/: Makefile  flags.def.mk  main.c
src/: 2dscene.h  Makefile.am  blendvec.c  blendvec.h  canvas.c  canvas.h  canvmerge.c  canvmerge.h  colours.c  colours.h  env.h  errors.h  glbl.h  holy.h  image.c  image.h  meson.build  remote_holy.h  remote_simde  selections.c  selections.h  shapes.c  shapes.h  srtex.h  srtexldr.c  srtexldr.h  surrender.h  textrender.c  textrender.h  tris.c  tris.h  types.h  umman.c  umman.h
tools/: Makefile.am  demos.h  img2srtex.c  meson.build  surdemo.c
tools/deprecated/: demo.c
