lib_LTLIBRARIES = libsurrender.la
libsurrender_la_SOURCES = 2dscene.c canvas.c selections.c shapes.c textrender.c srtexldr.c umman.c
pkginclude_HEADERS = 2dscene.h canvas.h selections.h shapes.h textrender.h colours.h glbl.h surrender.h errors.h srtex.h srtexldr.h remote_holy.h env.h umman.h
libsurrender_la_CFLAGS=-Ofast -fno-strict-aliasing -std=gnu99 -Wall -Wextra -Wpedantic